IF(DEFINED CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE}
    CACHE STRING "Choose the type of build, options are: Debug Release.")
ELSE()
  SET(CMAKE_BUILD_TYPE Debug
    CACHE STRING "Choose the type of build, options are: Debug Release.")
ENDIF()

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(SeLaLib)

ENABLE_LANGUAGE(Fortran)
INCLUDE(ExternalProject)

EXTERNALPROJECT_ADD( selalib
      PREFIX selalib
      GIT_TAG develop
      GIT_REPOSITORY git@gitlab.inria.fr:mingus/selalib.git
      CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DHDF5_PARALLEL_ENABLED=ON -DBUILD_TESTING=OFF)

FIND_PACKAGE(MPI  REQUIRED Fortran)
FIND_PACKAGE(HDF5 REQUIRED Fortran)

INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/selalib)
ADD_SUBDIRECTORY(src)
